--- a/src/assets/styles/custom_theme.scss
+++ b/src/assets/styles/custom_theme.scss
@@ -1,8 +1,8 @@
 // NutUI主题定制
 
 // Base
-$primary-color: #fa2c19;
-$primary-color-end: #fa6419;
+$primary-color: #16a34a;
+$primary-color-end: #4ade80;
 $help-color: #f5f5f5;
 $title-color: #1a1a1a;
 $title-color2: #666666;
