--- a/src/pages/login/index.scss
+++ b/src/pages/login/index.scss
@@ -2,17 +2,17 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  // justify-content: center;
   align-items: center;
 }
 
 .index {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  // justify-content: center;
   align-items: center;
-  font-size: 24rpx;
   margin-bottom: 100px;
+  width: 100%;
 }
 
 .title {
@@ -22,12 +22,12 @@
   font-size: 14px;
 }
 
-.btn {
+.login-btn {
   display: block;
   width: 70%;
-  background-color: #1677ff;
-  color: #fff;
+  // background-color: #1677ff;
+  // color: #fff;
   border-width: 0;
-  font-size: 12px;
+  font-size: 16px;
   border-radius: 20px;
 }
