--- a/src/pages/login/index.scss
+++ b/src/pages/login/index.scss
@@ -2,7 +2,7 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  // justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
